2001-12-26  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c: More fixes to intersector. When tops
	coincide, full ordering test is performed (with breaking),
	rather than just comparing b from line eq. Also, had a test
	for x >= backwards in art_svp_intersect_add_point. Thanks
	to Bruce Q. Hammond for test cases.

2001-11-21  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_break): Changed break
	logic systematically so that new breaks are always in order,
	rather than allowing them to become out of order, then try to fix
	them up later. It's no doubt possible to come up with cases in
	which this reduces precision, but it simplifies life nicely, so I
	did it.
	
	* (art_svp_intersect_horiz): Initialize (a, b, c) values of hs to
	avoid UMR's when they are tested later.

	* art_svp_ops.c (print_ps_vpath): Changed the coordinate
	transform so that it's done in the PostScript rather than
	the C code that outputs the coordinates. This makes it easier
	to reconstruct the vector path from the debug output.

2001-11-16  Alex Larsson  <alexl@redhat.com>

	* art_rect.c (art_drect_svp_union, art_drect_svp):
	Don't call art_drect_union() in these functions, since
	it considers zero-width or zero-height svg segments to
	be empty. This causes it to think i.e. rectangular svps
	are empty.

2001-11-07  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_horiz): Fixed important
	logic bug, failing to test crossings of neighbors when inserting
	horizontal lines. Also changed printf to art_dprint.

	* art_misc.c (art_dprint): Added function for debug printing,
	so verbose intersector output doesn't have to go through printf.

	* art_misc.h (ART_USE_NEW_INTERSECTOR): I've turned this on
	now, as the new intersector certainly seems to be performing
	better than the old one now.

2001-10-31  Anders Carlsson  <andersca@gnu.org>

	* Release 2.3.7

2001-10-15  Raph Levien  <raph@pixel.artofcode.com>
